HOME PAGE SEMIFINAL

--- a/main/index.html
+++ b/main/index.html
@@ -43,6 +43,28 @@
         <img src="./imgs/hero.png" alt="AnywhereNow Hero Image" class="hero-image">
     </div>
 
+    <!-- Explore Section -->
+    <div class="explore-section">
+        <h1 class="explore-heading">Explore World<br>Beyond Imagination</h1>
+
+        <div class="destinations">
+            <a href="/destination1" class="destination-box">
+                <img src="./imgs/1.png" alt="Place 1">
+            </a>
+            <a href="/destination2" class="destination-box">
+                <img src="./imgs/2.png" alt="Place 2">
+            </a>
+            <a href="/destination3" class="destination-box">
+                <img src="./imgs/3.png" alt="Place 3">
+            </a>
+        </div>
+    </div>
+
+    <!-- Hero Image Section -->
+    <div class="hero-section">
+        <img src="./imgs/bottom.png" alt="AnywhereNow Hero Image" class="hero-image">
+    </div>
+
     <script>
         function toggleProfileMenu() {
             const menu = document.getElementById("profile-menu");
