HOME PAGE SemiFINAL

--- a/main/index.html
+++ b/main/index.html
@@ -18,8 +18,10 @@
         </div>
 
         <div class="navbar-center">
-            <button class="nav-btn" onclick="location.href='/'">Home</button>
-            <button class="nav-btn" onclick="location.href='/book'">Book Tour</button>
+            <div class="nav-buttons">
+                <button class="nav-btn" onclick="location.href='/'">Home</button>
+                <button class="nav-btn" onclick="location.href='/book'">Book Tour</button>
+            </div>
         </div>
 
         <div class="navbar-right">
@@ -28,7 +30,7 @@
                 <div id="profile-menu" class="profile-menu">
                     <div class="profile-header">
                         <img src="./imgs/profilepic.png" class="menu-profile-pic" alt="Profile Pic">
-                        <p class="profile-name">John Doe</p>
+                        <p class="profile-name">Linn</p>
                     </div>
                     <button class="menu-btn">My Bookings</button>
                     <button class="menu-btn">Become a Guide</button>
