--- a/main/index.html
+++ b/main/index.html
@@ -19,8 +19,8 @@
 
         <div class="navbar-center">
             <div class="nav-buttons">
-                <button class="nav-btn" onclick="location.href='/'">Home</button>
-                <button class="nav-btn" onclick="location.href='/book'">Book Tour</button>
+                <button class="nav-btn" onclick="location.href='index.html'">Home</button>
+                <button class="nav-btn" onclick="location.href='tourist.html'">Book Tour</button>
             </div>
         </div>
 
@@ -50,13 +50,13 @@
         <h1 class="explore-heading">Explore World<br>Beyond Imagination</h1>
 
         <div class="destinations">
-            <a href="/destination1" class="destination-box">
+            <a href="tourist.html" class="destination-box">
                 <img src="./imgs/1.png" alt="Place 1">
             </a>
-            <a href="/destination2" class="destination-box">
+            <a href="tourist.html" class="destination-box">
                 <img src="./imgs/2.png" alt="Place 2">
             </a>
-            <a href="/destination3" class="destination-box">
+            <a href="tourist.html" class="destination-box">
                 <img src="./imgs/3.png" alt="Place 3">
             </a>
         </div>
