--- a/main/login.html
+++ b/main/login.html
@@ -1,115 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Login</title>
-  <style>
-    body {
-      background-color: #121212;
-      font-family: Arial, sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
-    }
-    
-    .login-container {
-      background-color: #2D2D2D;
-      padding: 40px;
-      border-radius: 10px;
-      box-shadow: 0 5px 15px rgba(0,0,0,0.1);
-      width: 300px;
-      color: white;
-      background-color: #333;
-    }
-
-    .login-container h2 {
-      text-align: center;
-      margin-bottom: 20px;
-      color: white;
-    }
-
-    .input-field {
-      width: 100%;
-      padding: 10px;
-      margin: 10px 0;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-      background-color: #555;
-      color: white;
-    }
-
-    .input-field::placeholder {
-      color: #ccc;
-    }
-
-    .login-btn {
-      width: 100%;
-      padding: 10px;
-      background-color: #4CAF50;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      margin-top: 10px;
-    }
-
-    .login-btn:hover {
-      background-color: #45a049;
-    }
-
-    .links {
-      margin-top: 15px;
-      text-align: center;
-    }
-
-    .forgot-password {
-      text-align: left;
-      font-size: 12px;
-      margin-top: 5px;
-    }
-
-    .forgot-password a {
-      color: white;
-      text-decoration: none;
-    }
-
-    .forgot-password a:hover {
-      text-decoration: underline;
-    }
-
-    .signup-text {
-      margin-top: 20px;
-      font-size: 14px;
-      text-align: center;
-      color: white;
-    }
-
-    .signup-text a {
-      color: #4CAF50;
-      text-decoration: none;
-    }
-
-    .signup-text a:hover {
-      text-decoration: underline;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="login-page">
 
   <div class="login-container">
     <h2>Login</h2>
-    <form>
-      <input type="email" placeholder="Email" class="input-field" required>
-      <input type="password" placeholder="Password" class="input-field" required>
+    <form method="POST" action="/login">
+      <input type="email" name="email" placeholder="Email" class="input-field" required>
+      <input type="password" name="password" placeholder="Password" class="input-field" required>
+      
       <div class="forgot-password">
         <a href="#">Forgot Password?</a>
       </div>
+
       <button type="submit" class="login-btn">Login</button>
+
       <div class="signup-text">
-        Don't have an account yet? <a href="#">Sign up now</a>
+        Don't have an account yet? <a href="/signup">Sign up now</a>
       </div>
     </form>
   </div>
